// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`autobarrel autobarrel tests 1`] = `
Array [
  "testing",
  "testing/autobarrel.json",
  "testing/README.md",
  "testing/testDir",
  "testing/testDir/excludedDir",
  "testing/testDir/excludedDir/excluded.ts",
  "testing/testDir/excludedDir/index.ts",
  "testing/testDir/excludedFile",
  "testing/testDir/excludedFile/excludedFile.ts",
  "testing/testDir/excludedFile/includedFile.ts",
  "testing/testDir/excludedFile/index.ts",
  "testing/testDir/excludedPattern",
  "testing/testDir/excludedPattern/abc.bin.ts",
  "testing/testDir/excludedPattern/def.bin.ts",
  "testing/testDir/excludedPattern/index.ts",
  "testing/testDir/excludedPattern/some.gen.ts",
  "testing/testDir/excludeDts",
  "testing/testDir/excludeDts/index.ts",
  "testing/testDir/excludeDts/nonDts.ts",
  "testing/testDir/excludeDts/something.d.ts",
  "testing/testDir/ignoredDir",
  "testing/testDir/ignoredDir/ignoredDir.ts",
  "testing/testDir/index.ts",
  "testing/testDir/jsTs",
  "testing/testDir/jsTs/file.js",
  "testing/testDir/jsTs/index.ts",
  "testing/testDir/jsTs/tsFile.ts",
  "testing/testDir/noTsFiles",
  "testing/testDir/noTsFiles/README.md",
  "testing/testDir/some",
  "testing/testDir/some/deep",
  "testing/testDir/some/deep/index.ts",
  "testing/testDir/some/deep/path",
  "testing/testDir/some/deep/path/file.ts",
  "testing/testDir/some/deep/path/index.ts",
  "testing/testDir/some/index.ts",
  "testing/testDir/someDir",
  "testing/testDir/someDir/app.ts",
  "testing/testDir/someDir/index.ts",
  "testing/testDir/watchTest",
  "testing/testDir/watchTest/index.ts",
  "testing/testDir/watchTest/watch.ts",
]
`;

exports[`autobarrel autobarrel tests: Paths Written 1`] = `
Array [
  "testDir/excludeDts/index.ts",
  "testDir/excludedDir/index.ts",
  "testDir/excludedFile/index.ts",
  "testDir/excludedPattern/index.ts",
  "testDir/index.ts",
  "testDir/jsTs/index.ts",
  "testDir/some/deep/index.ts",
  "testDir/some/deep/path/index.ts",
  "testDir/some/index.ts",
  "testDir/someDir/index.ts",
  "testDir/watchTest/index.ts",
]
`;

exports[`autobarrel autobarrel tests: testing/testDir/excludeDts/index.ts 1`] = `
"// created by autobarrel, do not modify directly

export * from './nonDts'
"
`;

exports[`autobarrel autobarrel tests: testing/testDir/excludedDir/index.ts 1`] = `
"// created by autobarrel, do not modify directly

export * from './excluded'
"
`;

exports[`autobarrel autobarrel tests: testing/testDir/excludedFile/index.ts 1`] = `
"// created by autobarrel, do not modify directly

export * from './includedFile'
"
`;

exports[`autobarrel autobarrel tests: testing/testDir/excludedPattern/index.ts 1`] = `
"// created by autobarrel, do not modify directly

export * from './some.gen'
"
`;

exports[`autobarrel autobarrel tests: testing/testDir/index.ts 1`] = `
"// created by autobarrel, do not modify directly

export * from './excludeDts/'
export * from './excludedFile/'
export * from './excludedPattern/'
export * from './jsTs/'
export * from './some/'
export * from './someDir/'
export * from './watchTest/'
"
`;

exports[`autobarrel autobarrel tests: testing/testDir/jsTs/index.ts 1`] = `
"// created by autobarrel, do not modify directly

export * from './tsFile'
"
`;

exports[`autobarrel autobarrel tests: testing/testDir/some/deep/index.ts 1`] = `
"// created by autobarrel, do not modify directly

export * from './path/'
"
`;

exports[`autobarrel autobarrel tests: testing/testDir/some/deep/path/index.ts 1`] = `
"// created by autobarrel, do not modify directly

export * from './file'
"
`;

exports[`autobarrel autobarrel tests: testing/testDir/some/index.ts 1`] = `
"// created by autobarrel, do not modify directly

export * from './deep/'
"
`;

exports[`autobarrel autobarrel tests: testing/testDir/someDir/index.ts 1`] = `
"// created by autobarrel, do not modify directly

export * from './app'
"
`;

exports[`autobarrel autobarrel tests: testing/testDir/watchTest/index.ts 1`] = `
"// created by autobarrel, do not modify directly

export * from './watch'
"
`;
